--- a/JS/V1/public_html/2D.html
+++ b/JS/V1/public_html/2D.html
@@ -980,6 +980,14 @@
                 }
 
 
+                const sonar__componentToHex = c => {
+                    const hex = c.toString(16);
+                    return hex.length === 1 ? '0' + hex : hex;
+                };
+
+                const sonar__rgbToHex = (r, g, b) => '#' + [r, g, b].map(sonar__componentToHex).join('');
+
+
             </script>
         </main>
         <script src="jquery-3.6.0.min.js"></script>
@@ -1128,24 +1136,6 @@
 
 
 <script>
-                const D3__canvas_heightmap_palette = [
-                    '#ffffff',
-                    '#eeeeee',
-                    '#dddddd',
-                    '#cccccc',
-                    '#bbbbbb',
-                    '#aaaaaa',
-                    '#999999',
-                    '#888888',
-                    '#777777',
-                    '#666666',
-                    '#555555',
-                    '#444444',
-                    '#323232',
-                    '#212121',
-                    '#101010',
-                    '#000000'
-                ];
                 const D3__canvas_texture_palette = [
                     '#ff3c00', '#fe4900', '#fe5600', '#fe6300', '#fd7000', '#fd7d00', '#fd8a00', '#fd9700', '#fca400', '#fcb100', '#fcbe00', '#fccb00', '#fbd800', '#fbe500', '#fbf200', '#fbff00',
                     '#76ff00', '#6ef402', '#66ea04', '#5ee006', '#56d609', '#4ecc0b', '#46c20d', '#3eb80f', '#37ae12', '#2fa414', '#279a16', '#1f9018', '#17861b', '#0f7c1d', '#07721f', '#006822',
@@ -1203,14 +1193,9 @@
 
                 }
                 function D3__canvas_heightmap_getColor(m) {
-                     D3__canvas_heightmap_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / 255); 
-                    let idx =  Math.round((m - sonar__depth_min_m) / D3__canvas_heightmap_getColor_dx);
-                    idx = 255- Math.min(Math.max(parseInt(idx), 0), 255); //constrain from to
-                    return   '#' + idx.toString(16)+ idx.toString(16)+ idx.toString(16);
-                    /*  D3__canvas_heightmap_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / D3__canvas_heightmap_palette.length); 
                     let idx = Math.round((m - sonar__depth_min_m) / D3__canvas_heightmap_getColor_dx);
-                    idx = Math.min(Math.max(parseInt(idx), 0), (D3__canvas_heightmap_palette.length - 1)); //constrain from to
-                    return D3__canvas_heightmap_palette[idx];*/
+                    idx = parseInt(255 - Math.min(Math.max(parseInt(idx), 0), 255)); //constrain from to                    
+                    return   sonar__rgbToHex([idx, idx, idx]);
                 }
                 function D3__canvas_texture_getColor(m) {
                     let idx = Math.round((m - sonar__depth_min_m) / D3__canvas_texture_getColor_dx);
@@ -1228,7 +1213,7 @@
 
                 function D3__init() {
                     D3__resolution_point_px = parseInt($('#D3__resolution_point_px').val()) || 0;
-                    D3__canvas_heightmap_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / D3__canvas_heightmap_palette.length);
+                    D3__canvas_heightmap_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / 255);
                     D3__canvas_texture_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / D3__canvas_texture_palette.length);
                     D3__canvas_offset_coef_lat = parseFloat(sonar__extrapolation_lat_step / D3__resolution_point_px);
                     D3__canvas_offset_coef_lng = parseFloat(sonar__extrapolation_lng_step / D3__resolution_point_px);
