--- a/JS/V1/public_html/2D.html
+++ b/JS/V1/public_html/2D.html
@@ -29,7 +29,7 @@
                     </div>                     
                     <hr class="my-1">
                     <div class="d-block"> 
-                        <b>Resolution of plane/section</b><br>                        
+                        <b>Resolution of plane/section/3d</b><br>                        
                         dLat &nbsp;<input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.00001" step="0.000001" id="sonar__resolution_dLat" style="width: 90px">                                 
                         <br>
                         dLng <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.000016" step="0.000001" id="sonar__resolution_dLng" style="width: 90px">   
@@ -160,6 +160,7 @@
                 let sonar__plane_pointsLatLng = [];
                 let sonar__map_pointsLatLng = [];
                 let sonar__section_pointsLatLng = [];
+                let D3__pointsLatLng = [];
                 //                
                 let sonar__section_pointsLatLng_used = [];
                 let sonar__section_isVertical = false;
@@ -338,6 +339,8 @@
 
                     sonar__point_selected_latlng();
                     sonar__axisDraw();
+
+                    D3__pointsLatLng = sonar__real_pointsLatLng;
                 }
                 function sonar__extrapolation_process() {
                     sonar__plane_pointsLatLng = [];
@@ -361,6 +364,8 @@
 
                     sonar__point_selected_latlng();
                     sonar__axisDraw();
+
+                    D3__pointsLatLng = sonar__extrapolation_pointsLatLng;
                 }
 //==================================== SECTION ===============================================================================================================================
                 function sonar__section_points_init(pointsLatLng) {
@@ -909,6 +914,8 @@
 
                     sonar__resolution_calc();
                     sonar__axisDraw();
+
+                    D3__pointsLatLng = sonar__real_pointsLatLng;
                 }
                 function sonar__getPulse_w_realBottom_mks_min(depth_mks) {
                     if (depth_mks < 2000) {
@@ -1173,13 +1180,13 @@
                     D3__canvas_texture_ctx.fillRect(0, 0, D3__w, D3__h);
 
                     //D3__canvas_heightmap.getContext('2d').filter = "blur(" + Math.round(D3__resolution_point_px/2) + "px)";
-                    //D3__canvas_texture.getContext('2d').filter = "blur(" + Math.round(D3__resolution_point_px/2) + "px)";
+                    //D3__canvas_texture.getContext('2d').filter = "blur(" + Math.round(D3__resolution_point_px/2) + "px)";                       
 
-                    for (let index in  sonar__extrapolation_pointsLatLng) {
+                    for (let index in  D3__pointsLatLng) {
                         const ll = index.split(/_/);
                         const lat = parseFloat(ll[0]) || 0;
                         const lng = parseFloat(ll[1]) || 0;
-                        const depthM = sonar__plane_pointsLatLng[index].depthM;
+                        const depthM = D3__pointsLatLng[index].depthM;
                         const left_px = D3__canvas_getOffsetLng_px(lng);
                         const top_px = D3__canvas_getOffsetLat_px(lat);
 
@@ -1217,8 +1224,8 @@
                     D3__resolution_point_px = parseInt($('#D3__resolution_point_px').val()) || 0;
                     D3__canvas_heightmap_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / 255);
                     D3__canvas_texture_getColor_dx = parseFloat((sonar__depth_max_m - sonar__depth_min_m) / 1024); //D3__canvas_texture_palette.length
-                    D3__canvas_offset_coef_lat = parseFloat(sonar__extrapolation_lat_step / D3__resolution_point_px);
-                    D3__canvas_offset_coef_lng = parseFloat(sonar__extrapolation_lng_step / D3__resolution_point_px);
+                    D3__canvas_offset_coef_lat = parseFloat(sonar__resolution_dLat / D3__resolution_point_px);
+                    D3__canvas_offset_coef_lng = parseFloat(sonar__resolution_dLng / D3__resolution_point_px);
 
                     D3__w = parseInt(D3__canvas_getOffsetLng_px(sonar__lng_max));
                     D3__h = parseInt(D3__canvas_getOffsetLat_px(sonar__lat_min));
@@ -1228,9 +1235,11 @@
                     const container = document.getElementById('D3__container');
                     container.innerHTML = '';
 
-                    //D3__camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 10000);
-                    D3__camera = new THREE.OrthographicCamera(D3__w / -2, D3__w / 2, D3__h / 2, D3__h / -2, 1, 1000);
-                    D3__camera.position.set(0, 0, D3__w);
+                    THREE.Object3D.DefaultUp.set(0, 0, 1);// change axis to XY-Z (default is XZ-Y)
+
+                    //D3__camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 0.1, 10000);
+                    D3__camera = new THREE.OrthographicCamera(D3__w / -2, D3__w / 2, D3__h / 2, D3__h / -2, 1, 10000);
+                    D3__camera.position.set(Math.round(D3__w / 2), Math.round(D3__h / 2), 200);
 
                     D3__scene = new THREE.Scene();
                     D3__scene.background = new THREE.Color('gray');
@@ -1238,7 +1247,7 @@
 
                     D3__renderer = new THREE.WebGLRenderer();
                     D3__renderer.setPixelRatio(window.devicePixelRatio);
-                    D3__renderer.setSize(Math.round(1.2 * D3__w), Math.round(1.2 * D3__h));
+                    D3__renderer.setSize(Math.round(1.3 * D3__w), Math.round(1.3 * D3__h));
                     //D3__renderer.shadowMap.enabled = true;
                     container.appendChild(D3__renderer.domElement);
 
@@ -1273,9 +1282,9 @@
 
                     D3__controls = new OrbitControls(D3__camera, D3__renderer.domElement);
                     D3__controls.addEventListener('change', render);
-                    D3__controls.target.set(0, 0, 0);
-                    D3__controls.minDistance = 20;
-                    D3__controls.maxDistance = 2500;
+                    D3__controls.target.set(0,0, 0);
+                    //D3__controls.minDistance = 20;
+                    //D3__controls.maxDistance = 2500;
                     D3__controls.enablePan = true;
 
                     /*D3__light = new THREE.PointLight(0xffffff, 1, 100);
